<resources>
    <string name="app_name">GoogleMapsApp</string>
    <!--<string name="google_maps_API_key">AIzaSyCdq4EtEM24r4WBGffJv-16b-IUTKxjQf0</string>-->

    <string name="google_maps_API_key">AIzaSyBWbhvPygisFjMV4k9PXXc1gBPG-sCKy9M</string>

    <string name="map">Map</string>
    <string name="magnifycd">MagnifyCD</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="gpscd">GpsCD</string>
    <string name="mapcd">MapCD</string>
    <string name="infocd">InfoCD</string>
</resources>
