<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_border"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/magnifycd"
            android:src="@drawable/ic_magnify" />

        <AutoCompleteTextView
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ic_magnify"
            android:layout_toRightOf="@+id/ic_magnify"
            android:background="@null"
            android:hint="@string/enter_address_city_or_zip_code"
            android:imeOptions="actionSearch"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="15sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relLayout1"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/gpscd"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_gps" />

    <ImageView
        android:id="@+id/place_picker"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/relLayout1"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/mapcd"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_map" />

    <ImageView
        android:id="@+id/place_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/place_picker"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/infocd"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_info" />

</RelativeLayout>